# vmsai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  run.py
config/: settings.py
core/: __init__.py  anti_spoofing.py  attendance.py  camera.py  database.py  face_engine.py
handoff-J1/app/: .env.example  .gitignore  README.md  docker-compose.yml  requirements-models.txt  requirements.txt
handoff-J1/app/configs/: default.yaml
handoff-J1/app/scripts/: train_fire_dfire.py
handoff-J1/app/tests/: test_interfaces.py  test_pipeline_smoke.py
handoff-J1/app/vms247/: __init__.py  app.py
handoff-J1/app/vms247/core/: interfaces.py  registry.py  rules.py
handoff-J1/app/vms247/integrations/: __init__.py  vlm_client.py  wholebody.py
handoff-J1/app/vms247/modules/: _template.py
handoff-J1/app/vms247/shell/: events.py  input.py  ui.py  (+2 more)
handoff-J2/app/: pyproject.toml
handoff-J2/app/configs/: sandbox.yaml
handoff-J2/app/scripts/: demo.py  download_baseline_weights.py  train_hardhat.py
handoff-J2/app/tests/: test_cascade_verifier.py
handoff-J2/app/vms247/core/: __init__.py  schemas.py
handoff-J2/app/vms247/modules/: __init__.py
handoff-J2/app/vms247/modules/m2_fire/: __init__.py  baseline.py  designated.py
handoff-J2/app/vms247/modules/m3_ppe/: baseline.py
handoff-J2/app/vms247/modules/m4_attendance/: designated.py
handoff-J2/app/vms247/shell/: __init__.py  metrics.py  verifier.py
handoff-J2/app/vms247/tools/: __init__.py  sandbox_run.py
scripts/: download_fas_model.py
web/templates/: dashboard.html
(+4 files in other folders)
