[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vms247"
version = "0.1.0"
description = "VMS247 MVP1 — feasibility demo + benchmark harness (4 AI modules, 2-track)"
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["vms247*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
